# ALSA

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CrackMain_BC.py  CrackTrain_BC.py  README.md  README.rst  environment.yml  environment_old.yml  flake.nix  kp_gpd.yml  model_BC.py  pyproject.toml  readme_BC.txt  requirements_old.txt
.github/workflows/: ci.yaml  reproduce.yaml
alsa/: __init__.py  __main__.py  cli.py  crack_cls.py  crack_main.py  crack_maths.py  crack_train.py  data.py  geo_proc.py  image_proc.py  model.py  signal_proc.py  utils.py
scripts/: predict.sh  reproduce.py  train.sh
tests/: __init__.py  conftest.py  test_cli.py  test_crack_main.py  test_crack_train.py  test_data.py  test_model.py  test_signal_proc.py
tests/sample_data/: KB11.pgw  ridge_config.json
tests/sample_data/KB11_areas/: kb11_sub_circle.dbf  kb11_sub_circle.shp  kb11_sub_circle.shx
tests/sample_data/KB11_traces/: kb11_traces.dbf  kb11_traces.shp
tests/sample_data/kl5_test_data/: kl5_subsample_circle.png.aux.xml
tests/sample_data/kl5_test_data/area/: kl5_subsample_bounds.dbf  kl5_subsample_bounds.shp  kl5_subsample_bounds.shx  kl5_subsample_circle.dbf  kl5_subsample_circle.shp  kl5_subsample_circle.shx
tests/sample_data/kl5_test_data/traces/: kl5_subsample_circle_traces.dbf  kl5_subsample_circle_traces.shp  kl5_subsample_circle_traces.shx  kl5_subsample_traces.dbf  kl5_subsample_traces.shp  kl5_subsample_traces.shx
