[tool.poetry]
name = "ALSA"
version = "0.0.1"
description = "Automatic Fracture Digitization"
authors = [
    "JonneTyo <tamminenjonne@gmail.com>",
    "nialov <nikolasovaskainen@gmail.com>",
]
# readme = "README.rst"
license = "MIT"
# Make sure hyphens/underscores are correct in urls
# homepage = "https://github.com/nialov/fractopo"
# repository = "https://github.com/nialov/fractopo"
# documentation = "https://fractopo.readthedocs.io/en/latest/"
# For inspiration: https://pydigger.com/keywords
keywords = [
    "data",
    "gis",
    "geology",
    "fracture",
    "topology",
]
# See https://pypi.org/classifiers/
# classifiers = [
#     "Development Status :: 4 - Beta",
#     "Intended Audience :: Science/Research",
#     "Topic :: Scientific/Engineering :: GIS",
#     "License :: OSI Approved :: MIT License",
#     "Programming Language :: Python :: 3 :: Only"
# ]
# include = ["CHANGELOG.md"]

[tool.poetry.scripts]
# tracevalidate = "fractopo.cli:tracevalidate_click"
# fractopo = "fractopo.cli:app"

[tool.poetry.urls]
# "Bug Tracker" = "https://github.com/nialov/fractopo/issues"

# Changes here should be kept in sync with ./environment.yml
[tool.poetry.dependencies]
python = ">=3.8,<3.10"
attrs = "==20.3.0"
cached-property = "==1.5.2"
certifi = "==2020.11.8"
click = "==7.1.2"
click-plugins = "==1.1.1"
cligj = "==0.7.0"
cycler = "==0.10.0"
decorator = "==4.4.2"
geopandas = "==0.8.1"
h5py = ">3.0"
imageio = "==2.9.0"
Keras = "==2.4.3"
kiwisolver = "==1.3.1"
matplotlib = "*"
mrcfile = "==1.1.2"
munch = "==2.5.0"
networkx = "==2.5"
numpy = "*"
pandas = "==1.1.4"
Pillow = "==8.0.1"
pyparsing = "==2.4.7"
pyproj = "==3.0.0.post1"
python-dateutil = "==2.8.1"
pytz = "==2020.4"
PyWavelets = "==1.1.1"
PyYAML = "==5.3.1"
scikit-image = "==0.18.1"
scipy = "1.6.3"
Shapely = "==1.7.1"
simplejson = "==3.17.2"
six = "==1.15.0"
tifffile = "==2020.10.1"
tensorflow = "*"
ridge-detection = "==2.0.1"


[tool.poetry.dev-dependencies]

[tool.poetry.extras]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
